# explorer

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  bootstrap  configure.ac
common/: Makefile.am  common.c  deque.c  except.c  frame.c  mem.c
include/: Makefile.am  argparse.h  common.h  cstrings.h  deque.h  error.h  errorcodes.h  frame.h  mem.h  minunit.h  preview.h
input-parser/: Makefile.am  input-parser.c  lexer.l  parser.y
src/: Makefile.am  example.c  explorer.c  preview.c
src/common/: Makefile.am  assert.c  cstrings.c  data-file.c  data-mmap.c  deque.c  frame.c
src/input-parser/: Makefile.am  parser.y  scanner.l
src/preview/: Makefile.am  preview.c
test/: Makefile.am  file.psv  test-data-mmap.c  test-deque.c  test-frame.c  test.csv  test1.c  test_deque.c
test/data/: Makefile.am  all-quotes.csv  covid_slim.csv  file.csv  has-nulls.csv  missing-field.csv  okay-large.csv  okay-small.csv  pipe-delimited.csv  some-quotes.csv  tab-delimited.csv  trailing-line.csv
test/integration/: Makefile.am
test/unit/: Makefile.am  test-data-mmap.c  test-deque.c  test-frame.c
